save통해서 비밀번호 변경, 회원탈퇴

--- a/src/main/resources/templates/Mypage.html
+++ b/src/main/resources/templates/Mypage.html
@@ -66,6 +66,7 @@
   <button type="submit">Logout</button>
 </form>
 <a href="/update.html">비밀번호변경</a>
+<a href="/delete.html">회원탈퇴</a>
 </body>
 
 </html>
